hphp/test/zend/good/ext/standard/tests/network/unixloop.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (array_search("unix",stream_get_transports()) === false)
    die('skip No support for UNIX domain sockets.');
}
