hphp/test/zend/bad/ext/session/tests/bug66481.php.skipif
<?php include('skipif.inc'); ?>
<?php if(substr(PHP_OS, 0, 3) == "WIN") die("skip Not for Windows"); ?>